--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "areas"]
 	path = areas
 	url = https://github.com/minetest-mods/areas.git
+[submodule "irc"]
+	path = irc
+	url = https://github.com/minetest-mods/irc.git
